client/src/pages/TopPicksPage/TopPicksPage.scss
@use "../../styles/partials/colors" as *;
@use "../../styles/partials/fonts" as *;
@use "../../styles/partials/mixins" as *;
@use "../../styles/global.scss" as *;

.top-picks-page {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 2rem;
  background-color: $primary-darker-blue;
  min-height: 100vh;

  &__title {
    font-size: 2.5rem;
    margin-bottom: 1rem;
    color: $neutral-white;
    text-align: center;
  }

  &__container {
    @include frosted-glass2;
    border-radius: 1.25rem;
    box-shadow: $shadow-quaternary;
    padding: 1rem;
    border: 5px solid $neutral-white;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
  }
  
  &__no-more-media-container {
    @include block-item(18rem, 26.2rem);
    @include frosted-glass2;
    display: flex;
    margin-top: 1rem;
    flex-direction: column;
    box-shadow: $shadow-primary;
    border-radius: 1.5rem;
    border: 5px solid $primary-dark-blue;
    justify-content: center;
    align-items: center;

    @include tablet {
      @include block-item(30rem, 34.8rem);
    }
  }

  &__title-container {
    background-color: $primary-medium-blue;
    padding: 1rem;
    border-radius: 1rem;
    border: 2px solid $primary-pale-blue;
    margin-top: 0;
    margin-bottom: 1rem;
    box-shadow: $shadow-senary;
  }

  &__intro {
    font-size: 1.25rem;
    margin-bottom: 1rem;
    color: $neutral-white;
    text-align: center;
  }

  &__media-card-container {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    width: 100%;
    max-width: 600px;
    margin-top: 2rem;
  }

  &__media-card {
    @include bg-white;
    @include animateBorder;
    @include borderAnimation;
    box-shadow: $shadow-senary;
    border-radius: 4rem;
    display: flex;
    justify-content: center;
    align-items: center;
    border: .875rem solid;
    flex-direction: column;
    padding: 2rem;
    width: 100%;
    max-width: 500px;
    margin-top: 2rem;

    @include small-mobile {
      padding: 1rem;
    }

    img {
      width: 100%;
      height: auto;
      border-radius: 0.5rem;
      @include small-mobile {
        width: 100%;
      }
    }
  }

  &__nav-button {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    background-color: rgba($neutral-black, 0.6);
    border: none;
    color: $primary-light-blue;
    font-size: 1.5rem;
    cursor: pointer;
    padding: 1rem;
    border-radius: 50%;
    transition: all 0.3s ease;
    z-index: 1001;

      &:hover {
        background-color: rgba($neutral-black, 0.8);
        color: $neutral-white;
        transform: translateY(-50%) scale(1.1);
      }

      &:active {
        transform: translateY(-50%) scale(1.05);
        box-shadow: 0 0 .625rem rgba($neutral-black, 0.5);
        background-color: $primary-dark-blue;
        color: $primary-very-light-blue;
      }

      &.top-picks-page__nav-button--left {
        left: 1rem;
      }

      &.top-picks-page__nav-button--right {
        right: 1rem;
      }
    }

  &__calendar-copy {
    display: none;

    @include tablet {
      display: block;
    }
  }

  &__calendar-button {
    @include block-item (5rem, 3rem);
    align-items: center;
    border: 1px solid $neutral-white;
    padding: 0.5rem 1rem;
    background: $button-dark-gradient;
    color: $neutral-white;
    box-shadow: $shadow-primary;
    position: relative;
    margin-top: 1rem;
    overflow: hidden;
    font-size: .85rem;
    border-radius: 1rem;
    cursor: pointer;
      
      @include tablet {
        @include block-item (11rem, 4.5rem);
        font-size: 1rem;
        display: inline-flex;
      }

      &:hover {
        background: $primary-dark-blue;
        color: $neutral-white;
        border: 1px solid $primary-light-blue;
      }

      &::before {
        content: "";
        position: absolute;
        top: 0;
        right: -100%;
        width: 200%;
        height: 100%;
        background: linear-gradient(to left, transparent, rgba(255, 255, 255, 0.2), transparent);
        transition: right 0.5s;
      }

      &:hover::before {
        right: 100%;
      }
   
      svg {
        @include tablet {
        margin-right: 0.5rem;
      }
    }
  }

  &__recommendations-button {
    @include block-item(15rem, 5rem);
    background-color: $primary-pale-blue;
    color: $primary-medium-blue;
    border: 2px solid $primary-medium-blue;
    padding: 0.5rem 1rem;
    font-size: 1rem;
    font-weight: bold;
    font-family: $primary-font;
    box-shadow: $shadow-senary;
    border-radius: 1rem;
    cursor: pointer;
    transition: background-color 0.3s, color 0.3s, border-color 0.3s, box-shadow 0.3s;
    
    &:hover,
    &:focus,
    &:visited {
      background-color: $primary-light-blue;
      color: $neutral-white;
      border: 1px solid $primary-medium-blue;
      text-decoration: none;
      animation: pulse 1.5s infinite;
      box-shadow: 0 0 20px $primary-dark-blue, 0 0 30px $primary-dark-blue, 0 0 40px $primary-dark-blue;
    }
    
    &:active {
      background-color: $primary-medium-blue;
      color: $neutral-white;
      border-radius: 1.25rem;
      border: 3px solid $primary-pale-blue;
      transform: translateY(4px);
      text-decoration: none;
      font-weight: bold;
      box-shadow: 0 0 10px $primary-medium-blue, 0 0 20px $primary-medium-blue;
    }
    
    @keyframes pulse {
      0% {
        box-shadow: 0 0 20px $primary-dark-blue, 0 0 30px $primary-dark-blue, 0 0 40px $primary-dark-blue;
      }
      50% {
        box-shadow: 0 0 30px $primary-dark-blue, 0 0 40px $primary-dark-blue, 0 0 50px $primary-dark-blue;
      }
      100% {
        box-shadow: 0 0 20px $primary-dark-blue, 0 0 30px $primary-dark-blue, 0 0 40px $primary-dark-blue;
      }
    }
  }

  &__background {
    position: absolute;
    bottom: -2.1875rem;
    left: 0;
    width: 100%;
    height: 8.4375rem;
    overflow: hidden;
    z-index: -9999;

    @include small-mobile {
      bottom: -.3125rem;
      height: 8.4375rem;
    }

    @include large-mobile {
      bottom: 0rem;
      height: 9.375rem;
    }

    @include tablet {
      bottom: 0rem;
      height: 12.5rem;
    }

    @include desktop {
      bottom: -3.25rem;
      height: 15.625rem;
    }

    @include large-desktop {
      bottom: 0rem;
      height: 17.5rem;
    }
  }

  &__no-more-media {
    @include block-item(20rem, 10rem);
    text-align: center;
    padding: 2rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 1rem;
    background-color: $primary-dark-blue;
    border:  2px solid $neutral-white;
    margin: .5rem;
    box-shadow: $shadow-primary;
    border-radius: 1rem;
    opacity: 1;

    p {
      font-size: 1.25rem;
      color: $neutral-white;
      margin-bottom: 1rem;
    }
  }
}

.calendar-modal {
  margin-top: 1.5rem;
}

